--- a/projects/index.html
+++ b/projects/index.html
@@ -66,23 +66,23 @@
     <div class="site-container">
       <header class="header">
         <div class="wrapper_nav header__style">
-          <a href="../" class="brand"
+          <a href="/" class="brand"
             ><img src="../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="../">Accueil</a></li>
+                <li><a href="/">Accueil</a></li>
                 <li>
-                  <a href="../about/">À propos</a>
+                  <a href="/about/">À propos</a>
                 </li>
                 <li>
-                  <h1 class="project__page"><a href="">Projets</a></h1>
+                  <h1 class="project__page"><a href="#">Projets</a></h1>
                 </li>
               </div>
               <li>
-                <a href="../contact/"
+                <a href="/contact/"
                   ><img src="../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
@@ -99,69 +99,77 @@
         data-component="Carousel"
       >
         <!-- Additional required wrapper -->
-        <div class="swiper-wrapper animation__wrapper">
+        <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide animation__lazy">
-            <h2 class="project__title_kind">Animation 3D</h2>
-            <h2 class="project__title">Mia dans l’autobus</h2>
-            <a href="mia-dans-lautobus/" class="button__small animation__fade"
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">Animation 3D</h2>
+            <h2 class="project__title animation__lazy">Mia dans l’autobus</h2>
+            <a
+              href="/projects/mia-dans-lautobus/"
+              class="button__small animation__fade"
               >En savoir plus</a
             >
-            <div class="hero__bgi">
+            <div class="hero__bgi animation__lazy">
               <img
                 src="../images/projet1-cover.jpg"
                 alt="Couverture du premier projet"
               />
             </div>
           </div>
-          <div class="swiper-slide animation__lazy">
-            <h2 class="project__title_kind">Animation multimédia</h2>
-            <h2 class="project__title">Robot à Montréal</h2>
-            <a href="robot-a-montreal/" class="button__small animation__fade"
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">
+              Animation multimédia
+            </h2>
+            <h2 class="project__title animation__lazy">Robot à Montréal</h2>
+            <a
+              href="/projects/robot-a-montreal/"
+              class="button__small animation__fade"
               >En savoir plus</a
             >
-            <div class="hero__bgi">
+            <div class="hero__bgi animation__lazy">
               <img
                 src="../images/projet2-cover.jpg"
                 alt="Couverture du deuxième projet"
               />
             </div>
           </div>
-          <div class="swiper-slide animation__lazy">
-            <h2 class="project__title_kind">
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">
               Mouvement québécois de la qualité
             </h2>
-            <h2 class="project__title">Salon MPA</h2>
-            <a href="salon-mpa/" class="button__small animation__fade"
+            <h2 class="project__title animation__lazy">Salon MPA</h2>
+            <a href="/projects/salon-mpa/" class="button__small animation__fade"
               >En savoir plus</a
             >
-            <div class="hero__bgi">
+            <div class="hero__bgi animation__lazy">
               <img
                 src="../images/projet3-cover.jpg"
                 alt="Couverture du troisième projet"
               />
             </div>
           </div>
-          <div class="swiper-slide animation__lazy">
-            <h2 class="project__title_kind">Animation multimédia</h2>
-            <h2 class="project__title">L’oasis</h2>
-            <a href="loasis/" class="button__small animation__fade"
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">
+              Animation multimédia
+            </h2>
+            <h2 class="project__title animation__lazy">L’oasis</h2>
+            <a href="/projects/loasis/" class="button__small animation__fade"
               >En savoir plus</a
             >
-            <div class="hero__bgi">
+            <div class="hero__bgi animation__lazy">
               <img
                 src="../images/projet4-cover.jpg"
                 alt="Couverture du quatrième projet"
               />
             </div>
           </div>
-          <div class="swiper-slide animation__lazy">
-            <h2 class="project__title_kind">Montage vidéo</h2>
-            <h2 class="project__title">Lumifest</h2>
-            <a href="lumifest/" class="button__small animation__fade"
+          <div class="swiper-slide">
+            <h2 class="project__title_kind animation__lazy">Montage vidéo</h2>
+            <h2 class="project__title animation__lazy">Lumifest</h2>
+            <a href="/projects/lumifest/" class="button__small animation__fade"
               >En savoir plus</a
             >
-            <div class="hero__bgi">
+            <div class="hero__bgi animation__lazy">
               <img
                 src="../images/projet5-cover.jpg"
                 alt="Couverture du cinquième projet"
@@ -179,7 +187,7 @@
       <div class="swiper-button-next navigation-buttons animation__fade"></div>
 
       <footer>
-        <div class="wrapper footer__style_projects animation__fade">
+        <div class="wrapper footer__style_projects">
           <ul class="socials">
             <li>
               <a
