--- a/projects/lumifest/index.html
+++ b/projects/lumifest/index.html
@@ -21,11 +21,6 @@
       rel="stylesheet"
     />
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="module" src="../../js/Main.js" defer></script>
   </head>
 
@@ -33,19 +28,19 @@
     <div class="site-container">
       <header class="header" data-component="Header" data-header="scrollLimit">
         <div class="wrapper_nav header__style">
-          <a href="../../" class="brand"
+          <a href="/" class="brand"
             ><img src="../../svg/logo.svg" alt="Logo Alanis Bédard"
           /></a>
 
           <nav>
             <ul class="nav_main">
               <div class="nav__animation">
-                <li><a href="../../">Accueil</a></li>
-                <li><a href="../../about/">À propos</a></li>
-                <li><a href="../../projects/">Projets</a></li>
+                <li><a href="/">Accueil</a></li>
+                <li><a href="/about/">À propos</a></li>
+                <li><a href="/projects/">Projets</a></li>
               </div>
               <li>
-                <a href="../../contact/"
+                <a href="/contact/"
                   ><img src="../../svg/letter.svg" alt="Logo de contact"
                 /></a>
               </li>
